--- a/index.html
+++ b/index.html
@@ -1,21 +1,116 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="th">
 <head>
-<meta charset="utf-8">
-<title>Practice JavaScript</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Lab 7 Form and Video</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet" />
+<link rel="stylesheet" href="style.css">
+ 
 </head>
 
-<body>
-<h1>เพิ่มข้อความ</h1>
-<input type="button" value="เพิ่ม" onclick="addText()">
-<p id="target">ICT12267</p>
+<body class="bg-light">
 
-<script>
-function addText(){
-  var target = document.getElementById("target");
-  var text = document.createTextNode('ถูกเพิ่มเรียบร้อยแล้ว');
-  target.appendChild(text);
-}
-</script>
+  <!-- Navbar -->
+  <header>
+    <div class="container">
+      <nav>
+        <div class="logo">Boonsiri Masan</div>
+        <ul class="nav-list">
+          <li><a href="#">หน้าแรก</a></li>
+          <li><a href="#">ข้อมูลบริษัท</a></li>
+          <li><a href="#">บริการ</a></li>
+          <li><a href="#">เกี่ยวกับเรา</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Space under header -->
+  <div class="header-space"></div>
+
+  <div class="container my-4">
+    <div class="video-wrapper">
+      <video id="mainVideo" class="video w-100 rounded shadow" autoplay loop muted playsinline>
+        <source src="242945_small.mp4" type="video/mp4">
+        วิดีโอนี้ไม่รองรับในเบราว์เซอร์ของคุณ
+      </video>
+    </div>
+  
+    <div class="card-footer bg-white text-center">
+      <button class="btn btn-warning" onclick="document.getElementById('mainVideo').play()">▶ Play</button>
+      <button class="btn btn-danger" onclick="document.getElementById('mainVideo').pause()">⏸ Pause</button>
+    </div>
+  </div>
+  
+
+  <!-- Registration Form -->
+<div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-8 col-lg-6">
+        <div class="card shadow-lg border-0">
+          <div class="card-header bg-primary text-white text-center">
+            <h2 class="mb-0 fs-4">แบบฟอร์มลงทะเบียน</h2>
+          </div>
+          <div class="card-body p-4">
+            <form>
+              <div class="mb-3">
+                <label for="fullname" class="form-label">ชื่อ-นามสกุล:</label>
+                <input type="text" class="form-control form-control-lg" id="fullname" name="fullname" placeholder="กรุณากรอกชื่อ-นามสกุล" required>
+              </div>
+  
+              <div class="mb-3">
+                <label for="email" class="form-label">อีเมล:</label>
+                <input type="email" class="form-control form-control-lg" id="email" name="email" placeholder="example@domain.com" required>
+              </div>
+  
+              <div class="mb-3">
+                <label for="password" class="form-label">รหัสผ่าน:</label>
+                <input type="password" class="form-control form-control-lg" id="password" name="password" required>
+              </div>
+  
+              <div class="mb-3">
+                <label class="form-label">เพศ:</label>
+                <div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="male" name="gender" value="male">
+                    <label class="form-check-label" for="male">ชาย</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="female" name="gender" value="female">
+                    <label class="form-check-label" for="female">หญิง</label>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="mb-4">
+                <label for="position" class="form-label">ตำแหน่ง:</label>
+                <select class="form-select form-select-lg" id="position" name="position" required>
+                  <option value="" selected disabled>กรุณาเลือกตำแหน่ง</option>
+                  <option value="Manager">Manager</option>
+                  <option value="Developer">Developer</option>
+                  <option value="Designer">Designer</option>
+                  <option value="Marketing">Marketing</option>
+                </select>
+              </div>
+  
+              <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+                <button type="submit" class="btn btn-success px-4">ลงทะเบียน</button>
+                <button type="reset" class="btn btn-secondary px-4">ล้างข้อมูล</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+    <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
